[package]
name    = "rapier3d"
version = "0.17.1"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "3-dimensional physics engine in Rust."
documentation = "http://docs.rs/rapier3d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/rapier"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "impulse_joints" ]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "dim3", "f32" ]
dim3    = [ ]
f32     = [ ]
parallel = [ "rayon" ]
simd-stable = [ "parry3d/simd-stable", "simba/wide", "simd-is-enabled" ]
simd-nightly = [ "parry3d/simd-nightly", "simba/packed_simd", "simd-is-enabled" ]
# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = [ "vec_map" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]
serde-serialize = [ "nalgebra/serde-serialize", "parry3d/serde-serialize", "serde", "bit-vec/serde" ]
enhanced-determinism = [ "simba/libm_force", "parry3d/enhanced-determinism" ]
debug-render = [ ]
profiler = [ "instant" ] # Enables the internal profiler.

# Feature used for debugging only.
debug-disable-legitimate-fe-exceptions = [ ]

# Feature used for development and debugging only.
# Do not enable this unless you are working on the engine internals.
dev-remove-slow-accessors = []

[package.metadata.docs.rs]
features = ["parallel", "simd-stable", "serde-serialize", "debug-render"]

[lib]
name = "rapier3d"
path = "../../src/lib.rs"
required-features = [ "dim3", "f32" ]


[dependencies]
vec_map = { version = "0.8", optional = true }
instant = { version = "0.1", features = [ "now" ], optional = true }
num-traits = { version = "0.2", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] }
parry3d = { version = "0.13", default-features = false, features = ["dim3", "f32"] }
simba = { version = "0.8", default-features = false }
approx = { version = "0.5", default-features = false }
rayon = { version = "1", optional = true }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
arrayvec = { version = "0.7", default-features = false }
bit-vec = { version = "0.6", default-features = false }
rustc-hash = { version = "1.0", default-features = false }
serde = { version = "1", features = [ "derive" ], optional = true }
downcast-rs = { version = "1.2.0", default-features = false }
num-derive = "0.3"
bitflags = "1"
hashbrown = "0.13.2"
# micromath = { version = "2.0.0"} # mathematical functions for f32

[dev-dependencies]
bincode = "1"
serde = { version = "1", features = [ "derive" ] }
